# SeamAwareDecimater

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  collapse_edge_seam.cpp  collapse_edge_seam.h  cost_and_placement.cpp  cost_and_placement.h  decimate.cpp  decimate.h  decimater.cpp  detect_foldover.cpp  detect_foldover.h  eiquadprog.h  half_edge.cpp  half_edge.h  neighbor_faces_and_boundary.cpp  neighbor_faces_and_boundary.h  pythonlike.h  quadric_error_metric.cpp  quadric_error_metric.h
cmake/: FindLIBIGL.cmake
